#5 Add authentication using Identity and jwt tokens

--- a/src/social/Playmate.Social.WebAPI/appsettings.Development.json
+++ b/src/social/Playmate.Social.WebAPI/appsettings.Development.json
@@ -4,5 +4,17 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Authentication": {
+    "JwtOptions": {
+      "Key": "super_secret_key",
+      "Issuer": "https://localhost:7219/",
+      "Audience": "https://localhost:7219/",
+      "ExpirationInMinutes": 15,
+      "RefreshTokenExpirationInMinutes": 7
+    }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=PlaymateSocialDbDev;Trusted_Connection=True;"
   }
 }
