--- a/src/social/Playmate.Social.WebAPI/appsettings.json
+++ b/src/social/Playmate.Social.WebAPI/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Authentication": {
+    "JwtOptions": {
+      "ExpirationInMinutes": 15,
+      "RefreshTokenExpirationInMinutes": 7
+    }
+  },
+  "ConnectionStrings": {
+  }
 }
