--- a/src/social-frontend/package.json
+++ b/src/social-frontend/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.37.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
@@ -43,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "react-router-dom": "^6.4.2",
     "sass": "^1.54.4"
   }
 }
