#5 Add auth services

--- a/src/social/Playmate.Social.WebAPI/appsettings.Development.json
+++ b/src/social/Playmate.Social.WebAPI/appsettings.Development.json
@@ -8,10 +8,8 @@
   "Authentication": {
     "JwtOptions": {
       "Key": "super_secret_key",
-      "Issuer": "https://localhost:7219/",
-      "Audience": "https://localhost:7219/",
-      "ExpirationInMinutes": 15,
-      "RefreshTokenExpirationInMinutes": 7
+      "Issuer": "https://0.0.0.0:7219/",
+      "Audience": "https://0.0.0.0:7219/"
     }
   },
   "ConnectionStrings": {
