--- a/src/social/Playmate.Social.WebAPI/appsettings.json
+++ b/src/social/Playmate.Social.WebAPI/appsettings.json
@@ -8,10 +8,11 @@
   "AllowedHosts": "*",
   "Authentication": {
     "JwtOptions": {
-      "ExpirationInMinutes": 15,
-      "RefreshTokenExpirationInMinutes": 7
+      "ExpirationInMinutes": 30,
+      "RefreshTokenExpirationInMinutes": 3600
     }
   },
   "ConnectionStrings": {
+    "DefaultConnection": ""
   }
 }
