--- a/src/social/Playmate.Social.Domain/Playmate.Social.Domain.csproj
+++ b/src/social/Playmate.Social.Domain/Playmate.Social.Domain.csproj
@@ -2,7 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
+	<LangVersion>10</LangVersion>
+	<ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
