--- a/src/social/Playmate.Social.Infrastructure/Playmate.Social.Infrastructure.csproj
+++ b/src/social/Playmate.Social.Infrastructure/Playmate.Social.Infrastructure.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
+		<LangVersion>10</LangVersion>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
@@ -18,6 +19,9 @@
 	
 	<ItemGroup>
 	  <ProjectReference Include="..\Playmate.Social.Application\Playmate.Social.Application.csproj" />
-	  <ProjectReference Include="..\Playmate.Social.Domain\Playmate.Social.Domain.csproj" />
+	</ItemGroup>
+	
+	<ItemGroup>
+	  <Folder Include="Persistence\Migrations\" />
 	</ItemGroup>
 </Project>
