#5 Fix appsettings for jwt and rename extensions in the api layer

--- a/src/social/Playmate.Social.WebAPI/appsettings.Development.json
+++ b/src/social/Playmate.Social.WebAPI/appsettings.Development.json
@@ -8,12 +8,14 @@
   "Authentication": {
     "JwtOptions": {
       "Key": "super_secret_key",
-      "Issuer": "https://0.0.0.0:7219/",
-      "Audience": "https://0.0.0.0:7219/"
+      "Issuer": "https://localhost:7294/",
+      "Audience": "https://localhost:7294/"
     }
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=PlaymateSocialDbDev;Trusted_Connection=True;"
   },
-  "AllowedOrigins": "http://localhost:3000"
+  "AllowedOrigins": [
+    "http://localhost:3000"
+  ]
 }
