--- a/src/social-frontend/Dockerfile
+++ b/src/social-frontend/Dockerfile
@@ -10,6 +10,10 @@ RUN mkdir node_modules/.cache && chmod -R 777 node_modules/.cache
 
 COPY . .
 
+ARG REACT_APP_BASE_API_URL
+
+ENV REACT_APP_BASE_API_URL $REACT_APP_BASE_API_URL
+
 EXPOSE 3000
 
 RUN npm run build
