--- a/src/compose.override.yml
+++ b/src/compose.override.yml
@@ -12,6 +12,6 @@ services:
   social-frontend:
     build:
       args:
-        REACT_APP_BASE_API_URL: http://localhost:5000
+        REACT_APP_BASE_API_URL: ${REACT_APP_BASE_API_URL}
     ports:
       - 80:3000
