--- a/src/social-api/.editorconfig
+++ b/src/social-api/.editorconfig
@@ -71,6 +71,8 @@ csharp_prefer_simple_using_statement = true:suggestion
 csharp_using_directive_placement = outside_namespace:silent
 csharp_space_around_binary_operators = before_and_after
 csharp_indent_labels = one_less_than_current
+csharp_space_before_colon_in_inheritance_clause = true
+csharp_space_after_colon_in_inheritance_clause = true
 
 [*.{cs,vb}]
 #### Naming styles ####
