#65 Add Cassandra db context

--- a/src/social-api/Playmate.Social.WebAPI/appsettings.Development.json
+++ b/src/social-api/Playmate.Social.WebAPI/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "Authentication": {
-    "JwtOptions": {
+    "JwtTokensConfiguration": {
       "Key": "super_secret_key",
       "Issuer": "https://localhost:5001/",
       "Audience": "https://localhost:5001/"
@@ -17,5 +17,11 @@
   },
   "AllowedOrigins": [
     "http://localhost:3000"
-  ]
+  ],
+  "Cassandra": {
+    "Configuration": {
+      "ContactPoints": "172.17.0.2",
+      "KeySpace": "chat"
+    }
+  }
 }
