--- a/src/compose.override.yml
+++ b/src/compose.override.yml
@@ -3,8 +3,8 @@ services:
     environment:
       - "ASPNETCORE_ENVIRONMENT=Development"
       - "ConnectionStrings:DefaultConnection=Server=social-db-sql;Database=SocialDbDev;User=sa;Password=${SA_PASSWORD?err};TrustServerCertificate=True;"
-      - "Authentication:JwtOptions:Issuer=http://localhost:5000/"
-      - "Authentication:JwtOptions:Audience=http://localhost:5000/"
+      - "Authentication:JwtTokensConfiguration:Issuer=http://localhost:5000/"
+      - "Authentication:JwtTokensConfiguration:Audience=http://localhost:5000/"
       - "AllowedOrigins=http://localhost:3000"
     ports:
       - 5000:80
