--- a/src/social-api/Playmate.Social.Infrastructure/Playmate.Social.Infrastructure.csproj
+++ b/src/social-api/Playmate.Social.Infrastructure/Playmate.Social.Infrastructure.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<TargetFramework>net7.0</TargetFramework>
 		<LangVersion>11</LangVersion>
@@ -7,6 +7,7 @@
 	</PropertyGroup>
 	
 	<ItemGroup>
+		<PackageReference Include="CassandraCSharpDriver" Version="3.18.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.0" />
@@ -18,6 +19,10 @@
 	
 	<ItemGroup>
 	  <ProjectReference Include="..\Playmate.Social.Application\Playmate.Social.Application.csproj" />
+	</ItemGroup>
+	
+	<ItemGroup>
+	  <Folder Include="Persistence\CassandraMappers\" />
 	</ItemGroup>
 
 </Project>
