#65 Fix add and select queries for chat

--- a/src/social-api/Playmate.Social.WebAPI/appsettings.Development.json
+++ b/src/social-api/Playmate.Social.WebAPI/appsettings.Development.json
@@ -20,7 +20,8 @@
   ],
   "Cassandra": {
     "Configuration": {
-      "ContactPoints": "172.17.0.2",
+      "ContactPoints": "127.0.0.1",
+      "Port": 9042,
       "KeySpace": "chat"
     }
   }
