#65 Integrate chat backend with frontend

--- a/src/social-api/Playmate.Social.WebAPI/appsettings.json
+++ b/src/social-api/Playmate.Social.WebAPI/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "Authentication": {
-    "JwtOptions": {
+    "JwtTokensConfiguration": {
       "ExpirationInMinutes": 30,
       "RefreshTokenExpirationInMinutes": 3600
     }
