--- a/src/social-frontend/package.json
+++ b/src/social-frontend/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "axios": "^1.1.2",
+    "emoji-picker-react": "^4.4.7",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
