--- a/src/social-frontend/package.json
+++ b/src/social-frontend/package.json
@@ -21,6 +21,7 @@
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-button": "^0.7.2",
     "react-hook-form": "^7.37.0",
     "react-redux": "^8.0.4",
     "react-scripts": "5.0.1",
