#33 Add endpoint for external login

--- a/src/social-api/Playmate.Social.WebAPI/Playmate.Social.WebAPI.csproj
+++ b/src/social-api/Playmate.Social.WebAPI/Playmate.Social.WebAPI.csproj
@@ -5,6 +5,7 @@
 	<LangVersion>11</LangVersion>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>468f982c-ce06-4f6d-a868-827179e7073c</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
