--- a/src/social-api/Playmate.Social.Infrastructure/Playmate.Social.Infrastructure.csproj
+++ b/src/social-api/Playmate.Social.Infrastructure/Playmate.Social.Infrastructure.csproj
@@ -8,6 +8,7 @@
 	
 	<ItemGroup>
 		<PackageReference Include="CassandraCSharpDriver" Version="3.18.0" />
+		<PackageReference Include="Google.Apis.Auth" Version="1.58.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.0" />
