--- a/src/social-frontend/package.json
+++ b/src/social-frontend/package.json
@@ -8,6 +8,7 @@
     "@microsoft/signalr": "^7.0.0",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.11",
+    "@react-oauth/google": "^0.5.1",
     "@reduxjs/toolkit": "^1.8.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
@@ -21,7 +22,6 @@
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-google-button": "^0.7.2",
     "react-hook-form": "^7.37.0",
     "react-redux": "^8.0.4",
     "react-scripts": "5.0.1",
