--- a/src/compose.yml
+++ b/src/compose.yml
@@ -41,6 +41,8 @@ services:
       - "AllowedOrigins=http://localhost:4000"
       - "Cassandra:Configuration:Port=9042"
       - "Cassandra:Configuration:ContactPoints=cassandra-db"
+      - "Authentication:Google:ClientId=${GOOGLE_CLIENT_ID?err}"
+      - "Authentication:Google:ClientSecret=${GOOGLE_CLIENT_SECRET?err}"
     ports:
       - 5000:80
     restart: always
@@ -55,7 +57,8 @@ services:
     build:
       context: ./social-frontend
       args:
-        REACT_APP_BASE_API_URL: ${REACT_APP_BASE_API_URL}
+        REACT_APP_BASE_API_URL: ${REACT_APP_BASE_API_URL?err}
+        REACT_APP_GOOGLE_CLIENT_ID: ${GOOGLE_CLIENT_ID?err}
     ports:
       - 4000:3000
     depends_on:
