--- a/src/social-frontend/package.json
+++ b/src/social-frontend/package.json
@@ -25,6 +25,7 @@
     "react-hook-form": "^7.37.0",
     "react-redux": "^8.0.4",
     "react-scripts": "5.0.1",
+    "recharts": "^2.2.0",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
