--- a/src/social-api/Playmate.Social.Infrastructure/Playmate.Social.Infrastructure.csproj
+++ b/src/social-api/Playmate.Social.Infrastructure/Playmate.Social.Infrastructure.csproj
@@ -7,12 +7,13 @@
 	</PropertyGroup>
 	
 	<ItemGroup>
-		<PackageReference Include="CassandraCSharpDriver" Version="3.18.0" />
+		<PackageReference Include="Azure.Storage.Blobs" Version="12.14.1" />
+		<PackageReference Include="CassandraCSharpDriver" Version="3.19.0" />
 		<PackageReference Include="Google.Apis.Auth" Version="1.58.0" />
-		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.0" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.0" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.0">
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.1" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.1" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.1" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.1">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
