Fixes for deploy

--- a/src/social-api/Playmate.Social.WebAPI/appsettings.Development.json
+++ b/src/social-api/Playmate.Social.WebAPI/appsettings.Development.json
@@ -22,7 +22,9 @@
     "Configuration": {
       "ContactPoints": "127.0.0.1",
       "Port": 9044,
-      "KeySpace": "chat"
+      "KeySpace": "chat",
+      "Username": "",
+      "Password": ""
     }
   }
 }
