#10 Add CD pipeline

--- a/src/social-api/Playmate.Social.WebAPI/appsettings.json
+++ b/src/social-api/Playmate.Social.WebAPI/appsettings.json
@@ -12,7 +12,7 @@
       "RefreshTokenExpirationInDays": 60
     }
   },
-  "WhiteListing": {
+  "Whitelisting": {
     "UseWhitelisting": true
   }
 }
