--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -24,13 +24,13 @@ jobs:
         run: dotnet build ./src/social-api/Playmate.Social.sln --configuration Release --no-restore
 
       - name: Publish
-        run: dotnet publish ./src/social-api/Playmate.Social.sln -c Rlease -o ${{ env.DOTNET_ROOT }}/social-api
+        run: dotnet publish ./src/social-api/Playmate.Social.sln -c Rlease -o ${{ env.DOTNET_ROOT }}
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
           name: api-artifact-test
-          path: ${{env.DOTNET_ROOT}}/social-api
+          path: ${{env.DOTNET_ROOT}}
 
   deploy-test:
     runs-on: ubuntu-latest
