--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -36,7 +36,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: dotnet-build-and-publish
     environment:
-      name: "test"
+      name: "playmate-social-api-azure"
       url: ${{ steps.deploy-to-azure.outputs.webapp-url }}
     steps:
       - name: Download artifact from build job
